подправил окно входа и карту