@@ -10,6 +10,7 @@ import common.connection.Response;
 import common.exceptions.*;
 
 import java.util.Arrays;
+import java.util.List;
 
 import static common.utils.Parser.parseId;
 
@@ -37,7 +38,7 @@ public class UpdateCommand extends CommandImpl {
             throw new AuthException("you dont have permission, element was created by " + owner);
 
         collectionManager.updateByID(id, getWorkerArg());
-        return new AnswerMsg().info( "element #" + id + " updated").setCollection(Arrays.asList(getWorkerArg())).setCollectionOperation(CollectionOperation.UPDATE);
+        return new AnswerMsg().info( "element #" + id + " updated").setCollection(List.of(getWorkerArg())).setCollectionOperation(CollectionOperation.UPDATE);
     }
 
 }
